# flake8-get-chaining

./: .gitignore  LICENSE  README.md  get_chaining.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pypi_upload.yml
tests/: test_get_chaining.py
